# collision-avoidance-library

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
avoidance/: CMakeLists.txt  QuadCopterShiftAvoidance.cc  QuadCopterShiftAvoidance.hh  QuadCopterStopAvoidance.cc  QuadCopterStopAvoidance.hh  QuadCopterVFFAvoidance.cc  QuadCopterVFFAvoidance.hh
cmake/: FindGLM.cmake  Findrealsense.cmake
common/: CMakeLists.txt  DepthCamera.hh  common.hh  math.cc  math.hh
communication/: CMakeLists.txt  GazeboContext.cc  GazeboContext.hh
detection/: CMakeLists.txt  DepthImageObstacleDetector.cc  DepthImageObstacleDetector.hh  DepthImagePolarHistDetector.cc  DepthImagePolarHistDetector.hh  DepthImageSimpleDetector.cc  DepthImageSimpleDetector.hh  DepthImageStraightLineDetector.cc  DepthImageStraightLineDetector.hh
doc/: Doxyfile.in
include/: coav.hh.in
meta-coav/: README
meta-coav/conf/: layer.conf
meta-coav/recipes-coav/coav-control/: coav-control_0.0.1.bb
meta-coav/recipes-support/libcoav/: libcoav_0.1.bb
samples/: CMakeLists.txt  coav_gcs.cc  coav_sample_app.cc  detector_sample.cc  polarhist_sample.cc  polarhist_test.cc  simple_gcs.cc  test.cc
sensors/: CMakeLists.txt  DepthCamera.cc  DepthCamera.hh  GazeboRealSenseCamera.cc  GazeboRealSenseCamera.hh  RealSenseCamera.cc  RealSenseCamera.hh
simulation/ardupilot-sitl/: parameters.parm
simulation/gazebo-models/: CMakeLists.txt
simulation/gazebo-models/gzsitl_quadcopter_rs/: model.config  model.sdf
simulation/gazebo-worlds/: gzcoav.world
src/avoidance/: Avoidance.hh  CMakeLists.txt  QuadCopterShiftAvoidance.cc  QuadCopterShiftAvoidance.hh  QuadCopterStopAvoidance.cc  QuadCopterStopAvoidance.hh  QuadCopterVFFAvoidance.cc  QuadCopterVFFAvoidance.hh
src/common/: CMakeLists.txt  DepthCamera.cc  DepthCamera.hh  common.cc  common.hh  math.cc  math.hh
src/communication/: CMakeLists.txt  GazeboContext.hh
src/detection/: CMakeLists.txt  DepthImageObstacleDetector.cc  DepthImageObstacleDetector.hh  DepthImagePolarHistDetector.cc  DepthImagePolarHistDetector.hh  DepthImageStraightLineDetector.hh  Detectors.hh
src/sensors/: CMakeLists.txt  GazeboRealSenseCamera.cc  GazeboRealSenseCamera.hh  RealSenseCamera.cc  RealSenseCamera.hh  Sensors.cc  Sensors.hh
src/vehicles/: CMakeLists.txt  MavQuadCopter.cc  MavQuadCopter.hh  Vehicles.hh
testbed/: coav-sim.sh  detect_collision.py  detect_takeoff.py  simple_mission.mission  testbed.sh
testbed/models/L-wall/: model.config  model.sdf
testbed/models/office_simple/: model.config  model.sdf
testbed/worlds/: simple.sdf  simple_obstacle.sdf  simple_office.sdf
tests/: CMakeLists.txt  PPTree_Test.cc  PPTree_Test.hh  Tests.cc  Tests.hh
tools/coav-control/: CMakeLists.txt  coav-control.cc  coav-control.hh  coav-control.service.in  coav-control.sh.in  parser.cc  visual.cc  visual.hh  visual_depth.cc  visual_env.cc
tools/vdebug/: CMakeLists.txt  vdebug.cc
utils/: CMakeLists.txt  DebugUtils.cc  DebugUtils.hh  PPTree.cc  PPTree.hh
vehicles/: CMakeLists.txt  GazeboQuadCopter.cc  GazeboQuadCopter.hh  MavQuadCopter.cc  MavQuadCopter.hh
